@@ -1,14 +1,19 @@
 package com.Graduation.EduTracker.Service.Implementation;
 
 import com.Graduation.EduTracker.Dtos.QuizDto;
+import com.Graduation.EduTracker.Mapper.QuizMapper;
+import com.Graduation.EduTracker.Models.Answer;
 import com.Graduation.EduTracker.Models.Question;
 import com.Graduation.EduTracker.Models.Quiz;
+import com.Graduation.EduTracker.Repos.AnswersRepo;
 import com.Graduation.EduTracker.Repos.QuestionsRepo;
 import com.Graduation.EduTracker.Repos.QuizRepo;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -20,26 +25,38 @@ public class QuizService {
 
      private final QuizRepo quizRepo;
      private final QuestionsRepo questionsRepo;
-
+     private final QuizMapper mapper;
+     private final AnswersRepo answersRepo;
     /* we will make check for the user is a teacher
      not then we will save the quiz or throw exception
     */
 
      public List<QuizDto> getAllQuizzes() {
-         return quizRepo.findAll().stream()
-                 .map(this::convertToDTO)
-                 .collect(Collectors.toList());
+          List<Quiz> AllQuizzes=  quizRepo.findAll();
+       return   AllQuizzes.stream().map(mapper::map).toList();
      }
 
     public QuizDto getQuizById(Long id) {
         Optional<Quiz> quizOpt = quizRepo.findById(id);
-        return quizOpt.map(this::convertToDTO).orElse(null);
+        return quizOpt.map(mapper::map).orElse(null);
     }
+    @Transactional
+    public QuizDto createQuiz(Quiz quiz) {
+        quizRepo.save(quiz);
+        List<Question> questionListForQuiz = new ArrayList<>();
+        for (Question question : quiz.getQuestions()){
 
-    public QuizDto createQuiz(QuizDto quizDTO) {
-        Quiz quiz = convertToEntity(quizDTO);
-        Quiz savedQuiz = quizRepo.save(quiz);
-        return convertToDTO(savedQuiz);
+            for (Answer answer : question.getAnswers()) {
+                answer.setQuestion(question);
+                answersRepo.save(answer);
+            }
+                question.setQuiz(quiz);
+            questionListForQuiz.add(question);
+            questionsRepo.save(question);
+
+            }
+
+        return mapper.map(quiz);
     }
 
     public QuizDto updateQuiz(Long id, QuizDto quizDTO) {
